[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "f2"
dynamic = ["version"]
description = "🚀Asynchronous based full-platform download tool"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/Johnserf-Seed/f2"
requires-python = ">=3.9"
authors = [
    { name = "Johnserf-Seed", email = "johnserf-seed@foxmail.com" },
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Intended Audience :: Customer Service",
    "License :: OSI Approved :: Apache Software License"
]

dependencies = [
    "click==8.1.7",
    "rich==13.7.1",
    "httpx==0.27.0",
    "aiofiles==22.1.0",
    "aiosqlite==0.20.0",
    "pyyaml==6.0.1",
    "jsonpath-ng==1.6.0",
    "importlib_resources==6.4.0",
    "m3u8==3.6.0",
    "pytest==8.2.2",
    "pytest-asyncio==0.21.1",
    "browser_cookie3==0.19.1",
    "pydantic==2.6.4",
    "qrcode==7.4.2",
    "websockets>=11.0",
    "PyExecJS==1.5.1",
    "protobuf==4.23.0",
    "gmssl==3.2.2",
]

[project.scripts]
f2 = "f2.cli.cli_commands:main"

[project.urls]
Homepage = "https://github.com/Johnserf-Seed/f2"
Documentation = "https://johnserf-seed.github.io/f2/"
Chat = "https://discord.gg//3PhtPmgHf8"
"Source Code" = "https://github.com/Johnserf-Seed/f2"
"Issue Tracker" = "https://github.com/Johnserf-Seed/f2/issues"

[tool.hatch.version]
path = "f2/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/f2",
]
